Ad Fix z-index for modal

--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -260,8 +260,8 @@
     }
 }
 
-// .profile-details > img {
-//     width: 10px;
-//     border-radius: 50%;
-// }
+
+.modal-backdrop{
+    z-index: 1 !important;
+}
 
